--- a/pm-payv3-forms/cards.html
+++ b/pm-payv3-forms/cards.html
@@ -1,3 +1,4 @@
+// block:start:cards-payv3-form
 <form class="juspay_inline_form" id="payment_form_1">
     <input type="hidden" class="merchant_id" value="guest"/>
     <input type="hidden" class="order_id" value="guest_order"/>
@@ -10,3 +11,4 @@
     <input type="radio" class="auth_type" value="" name="auth_type"> Verify with Secure Password
     <button type="submit" id="common_pay_btn">Make Payment</button>
 </form>
+// block:end:cards-payv3-form
