--- a/payv3-form/savedcardform.html
+++ b/payv3-form/savedcardform.html
@@ -1,4 +1,4 @@
-// block:start:nb-form
+// block:start:savedcard-form
 <script type="text/javascript">
     var juspay_form = Juspay.Setup({
        payment_form: "#payment_form",
@@ -43,4 +43,4 @@
        }
    })
 </script>
-// block:end:nb-form
+// block:end:savedcard-form
