web comment added for width and height

--- a/payment-page-web-html-integration-demo/app.html
+++ b/payment-page-web-html-integration-demo/app.html
@@ -44,8 +44,8 @@
             JUSPAY payment page needs a minimum width of 700px to open web payment page,
             on iframe widths less than 700px mobile web payment page will open
             
-            juspayIframe.width = "1000";
-            juspayIframe.height = "920";
+            juspayIframe.width = "1000";     // Set the width and height as per your requirements, for mobile try to
+            juspayIframe.height = "920";     // keep the width as auto, so it will take entire width of the frame provided.
             paymentPageDiv.appendChild(juspayIframe);
             */
 
