--- a/payment-page-web-html-integration-demo/app.html
+++ b/payment-page-web-html-integration-demo/app.html
@@ -40,6 +40,7 @@
             var paymentPageDiv = window.querySelector("#juspayDiv");
             var juspayIframe = document.createElement("iframe");
             juspayIframe.src = result.link;
+            juspayIframe.setAttribute("allow", "payment *;");
 
             JUSPAY payment page needs a minimum width of 700px to open web payment page,
             on iframe widths less than 700px mobile web payment page will open
