--- a/payment-page-web-html-integration-demo/app.html
+++ b/payment-page-web-html-integration-demo/app.html
@@ -35,15 +35,15 @@
 
 
             // OR
-            // Opening payment page in an iframe
+            // Opening the Hypercheckout screen in an iframe
             /* 
             var paymentPageDiv = window.querySelector("#juspayDiv");
             var juspayIframe = document.createElement("iframe");
             juspayIframe.src = result.link;
             juspayIframe.setAttribute("allow", "payment *;");
 
-            JUSPAY payment page needs a minimum width of 700px to open web payment page,
-            on iframe widths less than 700px mobile web payment page will open
+            JUSPAY Hypercheckout needs a minimum width of 700px to open the Hypercheckout screen on web,
+            on iframe widths less than 700px mobile web Hypercheckout screen will open
             
             juspayIframe.width = "1000";     // Set the width and height as per your requirements, for mobile try to
             juspayIframe.height = "920";     // keep the width as auto, so it will take entire width of the frame provided.
