--- a/expresscheckout-php-sdk/index.html
+++ b/expresscheckout-php-sdk/index.html
@@ -81,6 +81,7 @@
                 amount: amount,
             };
 
+//block:start:handle-payment-response
             var xhr = new XMLHttpRequest();
             xhr.open("POST", 'initiateJuspayPayment', true);
             xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
@@ -96,6 +97,8 @@
                     alert(`http status code: ${xhr.status} message: ${response.message}`);
                 }
             };
+//block:end:handle-payment-response
+            
             xhr.send(JSON.stringify(data));
         });
     </script>
