--- a/expresscheckout-php-sdk/index.html
+++ b/expresscheckout-php-sdk/index.html
@@ -81,7 +81,7 @@
                 amount: amount,
             };
 
-//block:start:handle-payment-response
+<!--block:start:open-paymentpage-->
             var xhr = new XMLHttpRequest();
             xhr.open("POST", 'initiateJuspayPayment', true);
             xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
@@ -97,7 +97,7 @@
                     alert(`http status code: ${xhr.status} message: ${response.message}`);
                 }
             };
-//block:end:handle-payment-response
+<!--block:end:open-paymentpage-->
             
             xhr.send(JSON.stringify(data));
         });
