--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
           <span class="v23_50">Home Screen</span
           ><span class="v23_51">Juspay SDK Integration Demo</span>
           <div class="v23_106">
-            <div class="v23_108"></div>
+            <img class="v23_108" style="padding:0 80px;" src="./img/product1.png"/>
             <span class="v23_109">Product 1</span
             ><span class="v23_110"
               >Price: Rs. 1/item Awesome product description for product one.
@@ -78,7 +78,7 @@
             </div>
           </div>
           <div class="v23_107">
-            <div class="v23_108"></div>
+            <img class="v23_108" style="padding:0 80px;" src="./img/product2.png"/>
             <span  class="v23_109">Product 2</span
             ><span class="v23_110"
               >Price: Rs. 1/item Awesome product description for product one.
