updated checkout screen

--- a/expresscheckout-php-sdk/index.html
+++ b/expresscheckout-php-sdk/index.html
@@ -57,29 +57,15 @@
 </style>
 <body>
     <div class="heading">
-        <h2>Order Form</h2>
+        <h2>Checkout Screen</h2>
     </div>
     <div class="container">
         <div class="form">
-            <form id="orderForm">
-                <label for="orderId">Order ID:</label>
-                <input type="text" id="orderId"><br><br>
-                <label for="amount">Amount*:</label>
-                <input type="number" id="amount" required><br><br>
-                <!-- <label for="payment-page-client-id">payment-page-client-id:</label>
-                <input type="text" id="payment-page-client-id"><br><br> -->
-            </form>
-            <button id="submitBtn" class="button-1">Submit</button>
+            <button id="submitBtn" class="button-1">Open Payment Page</button>
         </div>
     </div>
     <script>
         document.getElementById("submitBtn").addEventListener("click", function() {
-            var orderId = document.getElementById("orderId").value;
-            var amount = document.getElementById("amount").value;
-            var data = {
-                order_id: orderId,
-                amount: amount,
-            };
 
 <!--block:start:open-paymentpage-->
             var xhr = new XMLHttpRequest();
@@ -99,7 +85,7 @@
             };
 <!--block:end:open-paymentpage-->
             
-            xhr.send(JSON.stringify(data));
+            xhr.send(null);
         });
     </script>
 </body>
