--- a/pm-payv3-forms/cards.html
+++ b/pm-payv3-forms/cards.html
@@ -8,6 +8,9 @@
     <div class="security_code_div"></div>
     <input type="checkbox"  class="juspay_locker_save"> Save card information
     <input type="hidden" class="redirect" value="true"/>
+<!-- For mandates transaction 
+     <input type="radio" class="should_create_mandate" value="true" name="should_create_mandate" checked="checked"> Yes
+     <input type="radio" class="should_create_mandate" value="false" name="should_create_mandate"> No -->
     <button type="submit" id="common_pay_btn">Make Payment</button>
 </form>
 // block:end:cards-payv3-form
