--- a/pm-payv3-forms/cards.html
+++ b/pm-payv3-forms/cards.html
@@ -11,6 +11,13 @@
 <!-- For mandates transaction 
      <input type="radio" class="should_create_mandate" value="true" name="should_create_mandate" checked="checked"> Yes
      <input type="radio" class="should_create_mandate" value="false" name="should_create_mandate"> No -->
+<!-- For EMI transaction 
+    <input type="hidden" class="is_emi" value="true"/>
+    <input type="hidden" class="emi_bank" value="JP_HDFC" />
+    <input type="hidden" class="emi_tenure" value="3"/>
+    <input type="hidden" class="emi_type" value="STANDARD_EMI" /> 
+    <!--For No-cost and low-cost EMI Offers -->
+    <input type="hidden" class="offers" value="F36GH-THBIM, F36GH-DTH"/> -->
     <button type="submit" id="common_pay_btn">Make Payment</button>
 </form>
 // block:end:cards-payv3-form
