saved-cards.html
updation of EMI related params

--- a/pm-payv3-forms/saved-cards.html
+++ b/pm-payv3-forms/saved-cards.html
@@ -6,6 +6,13 @@
     <input type="hidden" class="card_isin"/>
     <div class="security_code_div"></div>
     <input type="hidden" class="redirect" value="true"/>
+    <!-- For EMI transaction
+    <input type="hidden" class="is_emi" value="true"/>
+    <input type="hidden" class="emi_bank" value="JP_HDFC" />
+    <input type="hidden" class="emi_tenure" value="3"/>
+    <input type="hidden" class="emi_type" value="STANDARD_EMI" />
+    <!--For No-cost and low-cost EMI Offers -->
+    <input type="hidden" class="offers" value="F36GH-THBIM, F36GH-DTH"/> -->
     <button type="submit" class="make_payment">Pay</button>
 </form>
 // block:end:savedcards-payv3-form
